# cpp-primer

./: .gitignore
src/: CMakeLists.txt
src/03-strings-vectors-arrays/: CMakeLists.txt
src/03-strings-vectors-arrays/03.02-strings/: 03.09-string-at-0.md  03.10-remove-punctuation.cpp  CMakeLists.txt
src/03-strings-vectors-arrays/03.03-vectors/: 03.12-definitions.md  03.13-element-counts.md  03.14-read-ints.cpp  03.15-read-strings.cpp  03.16-print-vectors-from-03.13.cpp  03.17-read-to-upper.cpp  03.18-subscript-of-zero-length-vector.md  03.19-initialize-vector-with-10-items.md  03.20-sum-pairs.cpp  CMakeLists.txt
src/03-strings-vectors-arrays/03.04-iterators/: 03.21-print-vectors-it.cpp  03.23-double-ivec.cpp  03.24-sum-pairs-it.cpp  03.25-grade-clusterin.cpp  03.26-binary-search.md  CMakeLists.txt
src/03-strings-vectors-arrays/03.05-arrays/: 03.27-array-definitions.md  03.28-array-values.md  03.30-indexing-error.md  03.31-initialize-array.cpp  03.32-copy-array.cpp  03.34-array-pointers.md  03.35-set-array-zero.cpp  03.36-compare-arrays.md  03.37-print-char-array.md  03.38-adding-pointers.md  03.39-compare-strings.cpp  03.40-strcat.cpp  03.41-initialize-vector-from-array.cpp  03.42-copy-vec-to-array.cpp  CMakeLists.txt
src/03-strings-vectors-arrays/03.06-multidimensional-arrays/: 03.43-print-multidimensional-array.cpp  03.44-print-multidimensional-array-type-alias.cpp  03.45-print-multidimensional-array-auto.cpp  CMakeLists.txt
src/03-strings-vectors-arrays/03.2-strings/: 03.06-string-to-X.cpp  03.07-string-t-X-char-loop-counter.md  03.08-string-to-X-reprise.cpp  03.11-range-for-legal.md  03.2-read.cpp  03.3-whitespace.md  03.4-string-compare.cpp  03.5-concatenate.cpp  CMakeLists.txt
src/16-templates/: CMakeLists.txt
src/16-templates/16.1-definition/: 16.2-compare.cpp  16.4-find.cpp  16.5-print.cpp  16.6-begin-end.cpp  16.7-array-size.cpp  CMakeLists.txt
