cmake_minimum_required(VERSION 3.5)

project(03.03-vectors)
add_compile_options(-Wall -Wextra -Werror -std=c++1z)

add_executable(03.14-read-ints 03.14-read-ints.cpp)
add_executable(03.15-read-strings 03.15-read-strings.cpp)
add_executable(03.16-print-vectors-from-03.13 03.16-print-vectors-from-03.13.cpp)
add_executable(03.17-read-to-upper 03.17-read-to-upper.cpp)
