cmake_minimum_required(VERSION 3.5)

project(03.04-iterators)
add_compile_options(-Wall -Wextra -Werror -std=c++1z)

add_executable(03.21-print-vectors-it 03.21-print-vectors-it.cpp)
add_executable(03.23-double-ivec 03.23-double-ivec.cpp)
add_executable(03.24-sum-pairs-it 03.24-sum-pairs-it.cpp)
add_executable(03.25-grade-clustering 03.25-grade-clusterin.cpp)
