cmake_minimum_required(VERSION 3.5)

project(03.05-arrays)
add_compile_options(-Wall -Wextra -Werror -std=c++1z)

add_executable(03.31-initialize-array 03.31-initialize-array.cpp)
add_executable(03.32-copy-array 03.32-copy-array.cpp)
add_executable(03.35-set-array-zero 03.35-set-array-zero.cpp)
add_executable(03.39-compare-strings 03.39-compare-strings.cpp)
add_executable(03.40-strcat 03.40-strcat.cpp)
