cmake_minimum_required(VERSION 3.5)

project(03.06-multidimensional-arrays)
add_compile_options(-Wall -Wextra -Werror -std=c++1z)

add_executable(03.43-print-multidimensional-array 03.43-print-multidimensional-array.cpp)
add_executable(03.44-print-multidimensional-array-type-alias 03.44-print-multidimensional-array-type-alias.cpp)
add_executable(03.45-print-multidimensional-array-auto 03.45-print-multidimensional-array-auto.cpp)
